--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 		Звіт про иконання завдань з курсу
 		<p><a href="example01.html" target="_blank">Приклад 01</a>
 		<p><a href="example02.html" target="_blank">Приклад 02</a>
+		<p><a href="example03.html" target="_blank">Приклад 03</a>
 	</body>
 ‍‌<html>
