--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <!--		Щось у середині вікна -->
 		Звіт про иконання завдань з курсу
 		<p><a href="example01.html" target="_blank">Приклад 01</a>
-		<p><a href="example02.html" target="_blank">Приклад 02</a>
-		<p><a href="example03.html" target="_blank">Приклад 03</a>
+		<p><a href="ARindex" target="_blank">Домашнє завдання 1 тижня</a>
 	</body>
 ‍‌<html>
