--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<html>
 	<head>
 		<title>‍
-			Персональний сайт студентки Чуркіна К.М. ТНІм-22
+			Персональний сайт студентки Чуркіної Карини ТНІм-22
 		‌</title>‍
 	</head>
 	<body>
@@ -9,5 +9,6 @@
 		Звіт про иконання завдань з курсу
 		<p><a href="example01.html" target="_blank">Приклад 01</a>
 		<p><a href="ARindex.html" target="_blank">Домашнє завдання 1 тижня</a>
+		<p><a href="ARindex_2.html" target="_blank">Домашнє завдання 2 тижня</a>
 	</body>
 ‍‌<html>
