--- a/ARindex_2.html
+++ b/ARindex_2.html
@@ -1,8 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <!-- <script src="aframe/aframe.min.js"></script> -->
-<script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
+    <script src="aframe/aframe.min.js"></script>
     <a-scene>
       <a-sky color="grey"></a-sky>
       <a-torus position="-2 1 -5" color="green" radius="1.2"></a-torus>
