--- a/ARindex_2.html
+++ b/ARindex_2.html
@@ -12,7 +12,7 @@
       <a-plane width="15" height="2" position="3 1 -9"></a-plane>
       <a-text font="times-msdf.json" negate="false" value="Чуркіна Карина, група ТНІм-22" color="black" width="10" position="-0.5 1 -6"></a-text>
       <a-torus position="-2 1 -5" color="green" radius="1.2" animation="property: components.material.material.color; type: color; from: green; to: red; loop: true; dur: 10000"> </a-torus>
-      <a-plane src="https://raw.githubusercontent.com/aframevr/sampleassets/master/assets/images/illustration/758px-Canestra_di_frutta_(Caravaggio).jpg" width="7" height="7" rotation="-55 0 0" position="-2 -2 -5" color="purple"></a-plane>
+      <a-plane src="758px-Canestra_di_frutta_(Caravaggio).jpg" width="7" height="7" rotation="-55 0 0" position="-2 -2 -5" color="purple"></a-plane>
     </a-scene>
   </body>
 </html>
