--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 		<p><a href="ARindex.html" target="_blank">Домашнє завдання 1 тижня</a>
 		<p><a href="ARindex_2.html" target="_blank">Домашнє завдання 2 тижня</a>
 		<p><a href="week_3/ARindex_3.html" target="_blank">Пиклад 3 тижня</a>
+		<p><a href="ARindex_3.html" target="_blank">Домашнє завдання 3 тижня</a>
 	</body>
 ‍‌<html>
