--- a/ARindex_3.html
+++ b/ARindex_3.html
@@ -11,7 +11,7 @@
 
 	<head>
 	<body>
-		<a-scene embedded arjs = 'trackingMethod: best'>
+		<a-scene embedded arjs = 'trackingMethod best'>
 			<a-anchor hit-testing-enabled='true'>
 				<a-marker preset="hiro">
 					<a-scene>
