--- a/ARindex_3.html
+++ b/ARindex_3.html
@@ -1,11 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
 	<head>
-<!--
-		<script src="aframe/aframe.min.js"></script>
-		<script src="../aframe/aframe.min.js"></script>
-		<script src="../ar/aframe-ar.js"></script>
--->
 		<script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
 		<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 
@@ -14,7 +9,8 @@
 		<a-scene embedded arjs> <!--  = 'trackingMethod: best'
 			<a-anchor hit-testing-enabled='true'>-->
 				<a-marker preset="hiro">
-<a-box color="blue" position="1 0 0"></a-box>
+<a-torus position="0 0.5 0" color="green" radius="0.5"></a-torus>
+<a-plane width="3.5" height="3.5" rotation="-55 0 0" position="0 -1 0" color="purple"></a-plane>
 					<!-- <a-scene>
 						<a-torus position="0 0.5 0" color="green" radius="0.5"></a-torus>
 						<a-plane width="3.5" height="3.5" rotation="-55 0 0" position="0 -1 0" color="purple"></a-plane>
