--- a/ARindex_3.html
+++ b/ARindex_3.html
@@ -9,9 +9,7 @@
 		<a-scene embedded arjs> <!--  = 'trackingMethod: best'
 			<a-anchor hit-testing-enabled='true'>-->
 				<a-marker preset="hiro">
-<a-torus position="0 0.5 0" color="green" radius="0.5"></a-torus>
-<a-plane width="3.5" height="3.5" rotation="-55 0 0" position="0 -1 0" color="purple"></a-plane>
-					<!-- <a-scene>
+					<!-- <a-scene> -->
 						<a-torus position="0 0.5 0" color="green" radius="0.5"></a-torus>
 						<a-plane width="3.5" height="3.5" rotation="-55 0 0" position="0 -1 0" color="purple"></a-plane>
 						<a-cylinder color="yellow" height="2" radius="0.05" position="0 0 0"></a-cylinder>
@@ -21,7 +19,7 @@
 						<a-text font="times-msdf.json" negate="false" value="Чуркіна Карина, група ТНІм-22" color="black" width="3" position="-1 0.5 -1"></a-text>
 						<a-torus position="0 0.5 0" color="green" radius="0.5" animation="property: components.material.material.color; type: color; from: green; to: red; loop: true; dur: 10000"> </a-torus>
 						<a-plane src="758px-Canestra_di_frutta_(Caravaggio).jpg" width="3.5" height="3.5" rotation="-55 0 0" position="0 -1 0" color="purple"></a-plane>
-					 </a-scene> -->
+					<!--  </a-scene> -->
 				</a-marker>
 				<!-- <a-camera-static/> -->
 				<a-entity camera></a-entity>
