--- a/ARindex_3.html
+++ b/ARindex_3.html
@@ -19,8 +19,8 @@
 						<a-torus position="0 0.5 0" color="green" radius="0.5" animation="property: components.material.material.color; type: color; from: green; to: red; loop: true; dur: 10000"> </a-torus>
 						<a-plane src="758px-Canestra_di_frutta_(Caravaggio).jpg" width="3.5" height="3.5" rotation="-55 0 0" position="0 -1 0" color="purple"></a-plane>
 				</a-marker>
-				<!-- <a-camera-static/> -->
-				<a-entity camera></a-entity>
+				<a-camera-static/>
+				<!-- <a-entity camera></a-entity> -->
 			<!-- </a-anchor> -->
 		</a-scene>
 	</body>
