--- a/ARindex_3.html
+++ b/ARindex_3.html
@@ -7,7 +7,7 @@
 	<head>
 	<body>
 		<a-scene embedded arjs= 'trackingMethod: best'>
-			<a-anchor hit-testing-enabled='true'>
+			<!-- <a-anchor hit-testing-enabled='true'> -->
 				<a-marker preset="hiro">
 						<a-torus position="0 0.5 0" color="green" radius="0.5"></a-torus>
 						<a-plane width="3.5" height="3.5" rotation="-55 0 0" position="0 -1 0" color="purple"></a-plane>
@@ -21,7 +21,7 @@
 				</a-marker>
 				<a-camera-static/>
 				<!-- <a-entity camera></a-entity> -->
-			</a-anchor>
+			<!-- </a-anchor> -->
 		</a-scene>
 	</body>
 </html>
