--- a/ARindex_3.html
+++ b/ARindex_3.html
@@ -9,6 +9,7 @@
 		<a-scene embedded arjs= 'trackingMethod: best'>
 			<!-- <a-anchor hit-testing-enabled='true'> -->
 				<a-marker preset="hiro">
+					<a-entity scale="0.5 0.5 0.5">
 						<a-torus position="0 0.5 0" color="green" radius="0.5"></a-torus>
 						<a-plane width="3.5" height="3.5" rotation="-55 0 0" position="0 -1 0" color="purple"></a-plane>
 						<a-cylinder color="yellow" height="2" radius="0.05" position="0 0 0"></a-cylinder>
