--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 		‌</title>‍
 	</head>
 	<body>
-<!--		Щось у середині вікна -->
+		<!--Щось у середині вікна -->
 		Звіт про иконання завдань з курсу
 		<p><a href="example01.html" target="_blank">Приклад 01</a>
 		<p><a href="ARindex.html" target="_blank">Домашнє завдання 1 тижня</a>
 		<p><a href="ARindex_2.html" target="_blank">Домашнє завдання 2 тижня</a>
 		<p><a href="week_3/ARindex_3.html" target="_blank">Пиклад 3 тижня</a>
 		<p><a href="ARindex_3.html" target="_blank">Домашнє завдання 3 тижня</a>
+		<p><a href="ARindex_4.html" target="_blank">Домашнє завдання 4 тижня</a>
 	</body>
 ‍‌<html>
