--- a/ARindex.html
+++ b/ARindex.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <script src="aframe/aframe.min.js"></script>
+  </head>
+  <body>
     <a-scene>
       <a-sky color="grey"></a-sky>
       <a-torus position="-2 1 -5" color="green" radius="1.2"></a-torus>
