--- a/ARindex_4.html
+++ b/ARindex_4.html
@@ -3,7 +3,6 @@
 	<head>
 		<script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
 		<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-
 	<head>
 	<body>
 		<a-scene embedded arjs= 'trackingMethod: best'>
@@ -12,7 +11,7 @@
 					<a-box position='0 0.5 0' material='color: red;' jump></a-box>
 				</a-marker>
 				<a-marker preset="kanji" id='marker-kanji' registerevents>
-					<a-entity geometry="primitive: sphere; radius: 0.5" light="type: point; color: white; intensity: 2" material="color: white; shader: flat; src: UV_Grid_Sm.jpg" position="0 0 -1"></a-entity>
+					<a-entity geometry="primitive: sphere; radius: 0.5" material="color: white; shader: flat; src: UV_Grid_Sm.jpg" position="0 0 -1"></a-entity>
 				</a-marker>
 				<a-marker type='barcode' value='6' id='marker-barcode-7' registerevents>
 					<a-sphere position='0 0.5 0' radius="0.5" material='color: green;' jump></a-sphere>
