--- a/ARindex_4.html
+++ b/ARindex_4.html
@@ -13,7 +13,7 @@
 			<a-marker preset="kanji" id='marker-kanji' registerevents>
 				<a-entity geometry="primitive: sphere; radius: 0.5" material="color: white; shader: flat; src: UV_Grid_Sm.jpg" position="0 0 -1"></a-entity>
 			</a-marker>
-			<a-marker type='pattern' url='pattern-K.pattt'> id='marker-pattern-K' registerevents>
+			<a-marker type='pattern' url='pattern-K.pattt'>
 				<a-box position='0 0 1' material="color: purple; src: BT_21.jpg" jump></a-box>
 			</a-marker>
 
