--- a/ARindex_4.html
+++ b/ARindex_4.html
@@ -8,12 +8,14 @@
 		<a-scene embedded arjs= 'trackingMethod: best'>
 
 			<a-marker preset="hiro" id='marker-hiro' registerevents>
+				<a-entity scale="0.5 0.5 0.5">
 				<a-box position='0 0 1' material='color: red;'></a-box>
 			</a-marker>
 			<a-marker preset="kanji" id='marker-kanji' registerevents>
 				<a-entity geometry="primitive: sphere; radius: 0.5" material="color: white; shader: flat; src: UV_Grid_Sm.jpg" position="0 0 -1"></a-entity>
 			</a-marker>
-			<a-marker type="pattern" url="pattern-K.pattt">
+			<a-marker type="pattern" url="pattern-K.patt">
+				<a-entity scale="0.5 0.5 0.5">
 				<a-box position='0 0 1' material="color: purple; src: BT_21.jpg"></a-box>
 			</a-marker>
 
