--- a/ARindex_4.html
+++ b/ARindex_4.html
@@ -9,7 +9,7 @@
 
 			<a-marker preset="hiro" id='marker-hiro' registerevents>
 <a-box position='0 0 1' material="color: purple; src: BT_21.jpg"></a-box>
-				!-- <a-box position='0 0 1' material='color: red;'></a-box>-->
+				<!-- <a-box position='0 0 1' material='color: red;'></a-box> -->
 			</a-marker>
 			<a-marker preset="kanji" id='marker-kanji' registerevents>
 				<a-entity geometry="primitive: sphere; radius: 0.5" material="color: white; shader: flat; src: UV_Grid_Sm.jpg" position="0 0 -1"></a-entity>
